--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos La Huasteca</title>
     <meta name="description" content="Tacos sudados La Huasteca. Ven y prueba los mejores taquitos sudados de Saltillo">
+
+    <!-- !Favicon link -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
     <!--!Fuente: awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
